--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,27 @@
     animation-delay: 1.5s;
   }
 }
+
+.service-images {
+  max-width: 75px;
+  max-height: 50px;
+  margin: 0 auto 30px;
+}
+
+.service-cards {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.service-card-header {
+  color: #1e1d4c;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.service-card-text {
+  color: #5e6282;
+  font-size: 16px;
+  line-height: 26px;
+  font-family: "Poppins", serif;
+}
