--- a/src/index.css
+++ b/src/index.css
@@ -38,15 +38,42 @@
   margin: 0 auto 30px;
 }
 
+.service-columns {
+  width: 100%;
+  position: relative;
+}
+
+.decore-service {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translate(-15%, 30%);
+  z-index: -1;
+  transition: all 0.5s;
+}
+
 .service-cards {
   width: 100%;
   height: 100%;
+  border-radius: 36px;
   text-align: center;
+  box-shadow: 0px 100px 80px 0px rgba(0, 0, 0, 2%),
+    0px 64.81481170654297px 46.85185241699219px 0px rgba(0, 0, 0, 2%),
+    0px 38.51852035522461px 25.481481552124023px 0px rgba(0, 0, 0, 1%),
+    0px 20px 13px 0px rgba(0, 0, 0, 1%),
+    0px 8.148148536682129px 6.518518447875977px 0px rgba(0, 0, 0, 1%),
+    0px 1.8518518209457397px 3.1481480598449707px 0px rgba(0, 0, 0, 0%);
+  padding: 40px 20px;
+  background-color: white;
+  transition: all 0.5s;
 }
 .service-card-header {
   color: #1e1d4c;
   font-weight: 600;
   font-size: 20px;
+  margin-top: 30px;
 }
 
 .service-card-text {
@@ -54,4 +81,33 @@
   font-size: 16px;
   line-height: 26px;
   font-family: "Poppins", serif;
+  max-width: 181px;
+  margin: 15px auto;
+}
+
+@media (min-width: 1000px) {
+  .service-columns {
+    width: 25%;
+    padding: 0 15px;
+  }
+  .service-cards {
+    box-shadow: none;
+  }
+  .service-cards:hover {
+    box-shadow: 0px 100px 80px 0px rgba(0, 0, 0, 2%),
+      0px 64.81481170654297px 46.85185241699219px 0px rgba(0, 0, 0, 2%),
+      0px 38.51852035522461px 25.481481552124023px 0px rgba(0, 0, 0, 1%),
+      0px 20px 13px 0px rgba(0, 0, 0, 1%),
+      0px 8.148148536682129px 6.518518447875977px 0px rgba(0, 0, 0, 1%),
+      0px 1.8518518209457397px 3.1481480598449707px 0px rgba(0, 0, 0, 0%);
+  }
+  .decore-service {
+    opacity: 0;
+    transform: translate(-20%, 40%);
+  }
+
+  .service-cards:hover + .decore-service {
+    opacity: 1;
+    transform: translate(-10%, 20%);
+  }
 }
