--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,18 @@
     0px 1.8518518209457397px 3.1481480598449707px 0px rgba(0, 0, 0, 0%);
 }
 
+.step-icon-container {
+  height: 36px;
+  width: 36px;
+  border-radius: 100%;
+  background-color: #f5f5f5;
+}
+
+.step-icon {
+  height: 16px;
+  width: 16px;
+  font-color: #9ca0b0;
+}
 @media (min-width: 1024px) {
   .service-columns {
     width: 25%;
