--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,9 @@
   width: 36px;
   border-radius: 100%;
   background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .step-icon {
