--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@
 .step-icon {
   height: 16px;
   width: 16px;
-  font-color: #9ca0b0;
+  font-color: #84829a;
 }
 @media (min-width: 1024px) {
   .service-columns {
